package grpc

import (
	"context"
)

// RAGClient RAG 引擎客户端接口
type RAGClient interface {
	Generate(ctx context.Context, req *RAGRequest) (*RAGResponse, error)
}

// AgentClient Agent 引擎客户端接口
type AgentClient interface {
	Execute(ctx context.Context, req *AgentRequest) (*AgentResponse, error)
}

// RetrievalClient 检索服务客户端接口
type RetrievalClient interface {
	Retrieve(ctx context.Context, req *RetrievalRequest) ([]interface{}, error)
}

// ModelRouterClient 模型路由客户端接口
type ModelRouterClient interface {
	RouteModel(ctx context.Context, req *ModelRouteRequest) (*ModelRouteResponse, error)
}

// Request/Response types
type RAGRequest struct {
	Query  string
	Chunks []interface{}
}

type RAGResponse struct {
	Answer     string
	Chunks     []string
	TokensUsed int
	CostUSD    float64
}

type AgentRequest struct {
	Task           string
	AvailableTools []string
	MaxIterations  int
}

type AgentStep struct {
	StepNumber int
	Thought    string
	ToolCall   *ToolCall
}

type ToolCall struct {
	ToolName  string
	Arguments map[string]string
	Result    string
}

type AgentResponse struct {
	Steps       []*AgentStep
	FinalAnswer string
	TokensUsed  int
	CostUSD     float64
}

type RetrievalRequest struct {
	Query    string
	TenantID string
	TopK     int
	Mode     string
}

type ModelRouteRequest struct {
	TenantID        string
	ModelType       string
	EstimatedTokens int
}

type ModelRouteResponse struct {
	ModelID       string
	Provider      string
	Endpoint      string
	EstimatedCost float64
}

// Mock implementations for now
type mockRAGClient struct{}

func NewRAGClient() RAGClient {
	return &mockRAGClient{}
}

func (c *mockRAGClient) Generate(ctx context.Context, req *RAGRequest) (*RAGResponse, error) {
	return &RAGResponse{
		Answer:     "Mock RAG response to: " + req.Query,
		Chunks:     []string{"chunk1", "chunk2"},
		TokensUsed: 100,
		CostUSD:    0.001,
	}, nil
}

type mockAgentClient struct{}

func NewAgentClient() AgentClient {
	return &mockAgentClient{}
}

func (c *mockAgentClient) Execute(ctx context.Context, req *AgentRequest) (*AgentResponse, error) {
	return &AgentResponse{
		Steps: []*AgentStep{
			{
				StepNumber: 1,
				Thought:    "I need to search for information",
				ToolCall: &ToolCall{
					ToolName:  "search",
					Arguments: map[string]string{"query": req.Task},
					Result:    "Search result",
				},
			},
		},
		FinalAnswer: "Mock agent response to: " + req.Task,
		TokensUsed:  200,
		CostUSD:     0.002,
	}, nil
}

type mockRetrievalClient struct{}

func NewRetrievalClient() RetrievalClient {
	return &mockRetrievalClient{}
}

func (c *mockRetrievalClient) Retrieve(ctx context.Context, req *RetrievalRequest) ([]interface{}, error) {
	return []interface{}{
		map[string]interface{}{
			"chunk_id": "chunk1",
			"content":  "Mock retrieved content 1",
			"score":    0.9,
		},
		map[string]interface{}{
			"chunk_id": "chunk2",
			"content":  "Mock retrieved content 2",
			"score":    0.8,
		},
	}, nil
}

type mockModelRouterClient struct{}

func NewModelRouterClient() ModelRouterClient {
	return &mockModelRouterClient{}
}

func (c *mockModelRouterClient) RouteModel(ctx context.Context, req *ModelRouteRequest) (*ModelRouteResponse, error) {
	return &ModelRouteResponse{
		ModelID:       "gpt-4-turbo",
		Provider:      "openai",
		Endpoint:      "https://api.openai.com/v1",
		EstimatedCost: 0.01,
	}, nil
}

